5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1582_579.log
== SUBMITION (2019-03-24 11:00:38) 
-- CODE:
rint("A UFAM tem", 2019 - 1909, "anos de fundacao.")

-- EXECUTION TIME:
0.179646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/579/main.py", line 1, in <module>
    rint("A UFAM tem", 2019 - 1909, "anos de fundacao.")
NameError: name 'rint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 11:00:43) 
-- CODE:
print("A UFAM tem", 2019 - 1909, "anos de fundacao.")

-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 11:01:09) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")

-- EXECUTION TIME:
0.142427
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:13:52) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")

-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
